--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ h2 {
     display: grid;
 }
 
+.mainContainer {
+    margin: 0 1em;
+}
+
 label, input, select {
     display: block;
     font-size: 2em;
